feat: add metadata getting
add class to get image metadata

MODULE3-PART2

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styles.css">
     <link rel="icon" sizes="32x32" href="./favicon.png">
-    <script defer src="validation.js"></script>
-    <script defer type="module" src="authorization.js"></script>
+    <script defer src="build/validation.js"></script>
+    <script defer type="module" src="build/authorization.js"></script>
     <title>Gallery</title>
 </head>
 <body>
