--- a/frontend/404.html
+++ b/frontend/404.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script defer src="404.js"></script>
+    <script defer src="build/404.js"></script>
     <link rel="stylesheet" href="./styles.css">
     <link rel="icon" sizes="32x32" href="./favicon.png">
     <title>Not Found</title>
