--- a/frontend/gallery.html
+++ b/frontend/gallery.html
@@ -7,7 +7,8 @@
     <title>Gallery</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="icon" sizes="32x32" href="./favicon.png">
-    <script defer type="module" src="pictures.js"></script>
+    <script defer type="module" src="build/pictures.js"></script>
+    <script defer type="module" src="build/metadata.js"></script>
 </head>
 <body>
     <header>
